# NewsFlow-Bot

./: .env.example  .gitignore  GUIDE.md  Makefile  README.md  README_CN.md  README_EN.md  REFACTOR_PLAN.md  alembic.ini  full_rss_DiscordBot.py  pyproject.toml  rssDiscordBot.py  simple_rss_DiscordBot.py
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  test.yml
alembic/: env.py
alembic/versions/: 20260420_1624_9ef238497e99_initial_schema.py  20260422_0116_ed46ab8042bd_add_filter_rule_and_was_filtered.py  20260422_0451_8e1b84612c65_add_channel_digests_table.py  20260423_0626_b5f9043fff02_drop_unused_subscription_columns.py  20260423_0659_e12acc4a473c_add_webhook_destinations_table.py  20260424_1455_5640759115e1_add_last_pinned_message_id_to_channel_.py  20260507_1000_a4f1d92e7c83_add_silent_to_subscriptions.py  20260508_1100_b9c2e7a5d3f4_sent_entries_dedupe_by_feed_guid.py  20260528_1200_a7f3c9e21b06_created_updated_at_timestamptz.py  20260531_1000_b2f4a6c8d0e1_add_feed_source_type_and_config.py  20260531_1200_c7d9e1f3a5b2_add_sent_entry_seeded.py  20260716_1300_d4e6f8a0b2c4_add_channel_settings_table.py  20260718_0900_e5f7a9b1c3d5_add_webhook_destination_health.py  20260718_1600_f6a8b0c2d4e6_add_subscription_message_template.py  20260718_2000_b8d0e2f4a6c8_add_subscription_mention_and_thread.py
config/: .env.example  .gitkeep
docker/: Dockerfile  docker-compose.yml
samples/: curated-feeds-finance.opml  curated-feeds-general.opml  curated-feeds-tech.opml  curated-feeds.opml  sources.example.yaml  webhooks.example.yaml
src/newsflow/: __init__.py  checkconfig.py  config.py  main.py
tests/: conftest.py
tests/integration/: test_delivery_pipeline.py
tests/unit/: test_add_feed_race.py  test_api_app.py  test_apply_digest_header.py  test_channel_defaults.py  test_channel_migration.py  test_checkconfig.py  test_config_reload.py  test_config_wiring.py  test_cross_sync.py  test_custom_prompts.py  test_dedup_summary.py  test_digest_service.py  test_digest_timezone.py  test_discord_autocomplete.py  test_discord_embed.py  test_discord_error_handler.py  test_discord_intents.py  test_dispatch_concurrency.py  test_dispatch_ordering.py  test_dispatcher_backlog.py  test_dispatcher_channel_gone.py  test_dispatcher_commit.py  test_dispatcher_deliver_digest.py  test_dispatcher_filter.py  test_dispatcher_heartbeat.py  test_dispatcher_preview.py  test_feeds_api.py  (+44 more)
(+66 files in other folders)
